# Test_task_client-server

./: README.md
Test_task/: .gitignore  CMakeLists.txt  client.cpp  client.h  client_main.cpp  client_service.cpp  client_service.h  server.cpp  server.h  server_main.cpp
